--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.vaibhav.lifecycle"
+        applicationId "com.cs646x.lifecycle"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
